k8s/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: web-resume
  namespace: web
spec:
  type: ClusterIP
  selector:
    app: web-resume
  ports:
  - port: 80
    targetPort: 80
